--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ workflows:
           context: mycontext
           create-repo: true
           dockerfile: Dockerfile
-          path: pathToMyDockerfile
+          path: ./client/Dockerfile
           profile-name: ecr-user #AWS profile name to be configured.
           repo: sample-flask #Name of an Amazon ECR repository
           tag: 'latest,${CIRCLE_SHA1}'
