added new circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,8 @@ workflows:
   deployment:
     jobs:
       - aws-ecr/build_and_push_image:
-          context: ./client         
           dockerfile: ./client/Dockerfile
-          path: ./client/Dockerfile
+          path: ./client
           profile-name: ecr-user #AWS profile name to be configured.
           repo: sample-flask #Name of an Amazon ECR repository
           tag: '${CIRCLE_SHA1}'
